# BC

./: CMakeLists.txt  Nacitanie_main.cpp  Threshold_main.cpp  main.cpp
